fix for posts causing overflow

--- a/src/assets/css/components/recent-posts.css
+++ b/src/assets/css/components/recent-posts.css
@@ -1,11 +1,15 @@
 .recent-posts__list {
 	display: grid;
 	gap: 1.5rem;
-	grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+	grid-template-columns: repeat(auto-fill, 1fr);
 	list-style: none;
 	margin-bottom: 3rem;
 	margin-top: 3rem;
 	padding: 0;
+
+	@media (min-width: 30em) {
+		grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+	}
 }
 
 .recent-posts__list-item {
